# brandpixy

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  keys.txt  models.txt  pyproject.toml  requirements.txt  run_backend.bat  vercel.json
api/: index.py
app/app/: .gitignore  fly.toml  pyproject.toml
app/app/backend/app/: main.py
app/app/frontend/: package-lock.json  package.json
app/app/frontend/src/: app.css
app/app/frontend/src/lib/components/: LogoCube.svelte
app/app/frontend/src/routes/: +layout.svelte  +page.svelte
app/landing/: index.html
app/landing/js/: fontshare-q7voj3qt.cgvuhyec.mjs  framer-font-g73bna7n.bsu7kyr2.mjs  framer-module-checkcircle.js-0.0.57  framer.yz2cnp20.mjs  google-hhqrbnom.rujcsiu0.mjs  kqer2fgnpvzv3l3ci_djaozzl4oh80ayit2si0kuvwo.ms3witf1.mjs  motion.brazvrxr.mjs  react.uewv45di.mjs  script_main.bfpqnu_g.mjs  searchindex-8vbmu6ygeuq8.json  shared-lib.cq-vjevg.mjs
backend/: requirements.txt
backend/app/: main.py
frontend/: DESIGN_UPDATES.md  DOCUMENTATION_INDEX.md  QUICK_START.md  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: app.css  app.html
frontend/src/lib/components/: ThemeToggle.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: sitemap.xml
js/: fontshare-ljwoe5kg.dznezxxp.mjs  fontshare-mhxfpdhs.bvprbykj.mjs  google-654gt66w.bjc6lm1h.mjs  google-mnohfpxz.bqxez1r3.mjs  px9hioivm.bujizbdp.mjs  rerouter.js
